first full version

--- a/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
+++ b/examples/character_level_language_modelling/autoregressive_LSTM.ipynb
@@ -178,19 +178,19 @@
      "output_type": "stream",
      "text": [
       "556949\n",
-      "556916\n",
-      "['\\ufeffThe Project Gutenberg EBook of C', 'The Project Gutenberg EBook of Ch', 'he Project Gutenberg EBook of Che', 'e Project Gutenberg EBook of Ches', ' Project Gutenberg EBook of Chess']\n"
+      "556928\n",
+      "['\\ufeffThe Project Gutenber', 'The Project Gutenberg', 'he Project Gutenberg ', 'e Project Gutenberg E', ' Project Gutenberg EB']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d49772b3d1f44834a9ad9339f5da1d51",
+       "model_id": "9af9e90d62fd408a863ed653d98457d0",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=556916.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=556928.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -201,12 +201,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "torch.Size([556916, 33])\n"
+      "torch.Size([556928, 21])\n"
      ]
     }
    ],
    "source": [
-    "length = 33\n",
+    "length = 21\n",
     "lines = []\n",
     "for i in range(len(text))[:-length]:\n",
     "    lines.append(text[i:length + i])\n",
@@ -228,35 +228,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive Transformer Encoder\n",
+      "Model: Autoregressive LSTM\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Max sequence length: 32\n",
       "Embedding dimension: 32\n",
-      "Feedforward dimension: 128\n",
+      "Hidden units: 128\n",
       "Layers: 2\n",
-      "Attention heads: 2\n",
-      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 45,311\n",
+      "Trainable parameters: 230,335\n",
       "\n",
-      "Epoch | Train                 | Development           | Training time\n",
-      "      | Loss     | Error Rate | Loss     | Error Rate |\n",
-      "---------------------------------------------------------------------\n",
-      "    1 |   2.1008 |     53.381 |   3.1091 |     76.778 |         78.23\n",
-      "    2 |   1.5755 |     44.286 |   2.9905 |     74.178 |        153.83\n",
-      "    3 |   1.4174 |     40.473 |   2.8962 |     72.456 |        228.42\n",
-      "    4 |   1.3301 |     38.326 |   2.8123 |     70.347 |        301.76\n",
-      "    5 |   1.2726 |     36.896 |   2.7413 |     69.388 |        378.12\n"
+      "Epoch | Train                 | Training time\n",
+      "      | Loss     | Error Rate |\n",
+      "---------------------------------------------\n",
+      "    1 |   1.9706 |     50.012 |         47.92\n",
+      "    2 |   1.3346 |     37.500 |         96.02\n",
+      "    3 |   1.1832 |     33.895 |        144.07\n",
+      "    4 |   1.1067 |     32.094 |        192.33\n",
+      "    5 |   1.0584 |     30.944 |        240.65\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.TransformerEncoder(char2i, i2char)\n",
+    "net = autoregressive.LSTM(char2i, i2char)\n",
     "net.to(device)\n",
-    "# using a subsample as \"dev\" set\n",
-    "performance = net.fit(encoded, encoded[:1000], save_path = \"checkpoints/autoregressive_transformer.pt\")"
+    "performance = net.fit(encoded, save_path = \"checkpoints/autoregressive_lstm.pt\")\n",
+    "net.save_architecture(\"architectures/autoregressive_lstm.architecture\")"
    ]
   },
   {
@@ -268,29 +265,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive Transformer Encoder\n",
+      "Model: Autoregressive LSTM\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Max sequence length: 32\n",
       "Embedding dimension: 32\n",
-      "Feedforward dimension: 128\n",
+      "Hidden units: 128\n",
       "Layers: 2\n",
-      "Attention heads: 2\n",
-      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 45,311\n",
+      "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([-17.3235, -17.3223, -17.8486, -15.1379, -17.0083], device='cuda:0')\n"
+      "tensor([-16.2640, -17.0789, -16.3670, -16.9348, -19.7253], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project of the play the paw',\n",
-       " 'The Project the pawn an the pawn',\n",
-       " 'he Project Gut the play the pawn',\n",
-       " 'e Project Gut the pawn the pawn ',\n",
-       " ' Project Gut the pawn the play t']"
+       "['\\ufeffThe Project Gutenberg-tm the pawn at Kt5',\n",
+       " 'The Project Gutenberg-tm the pawn at Kt5 ',\n",
+       " 'he Project Gutenberg 1. ... K-Kt5; 12. Kt',\n",
+       " 'e Project Gutenberg E game in the pawn at',\n",
+       " ' Project Gutenberg EB-K4 is a pawn at Kt5']"
       ]
      },
      "execution_count": 9,
@@ -300,10 +294,10 @@
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.TransformerEncoder(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_lstm.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.greedy_search(encoded[:5, :12])\n",
+    "indexes, log_probabilities = net.greedy_search(encoded[:5])\n",
     "\n",
     "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
@@ -318,29 +312,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive Transformer Encoder\n",
+      "Model: Autoregressive LSTM\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Max sequence length: 32\n",
       "Embedding dimension: 32\n",
-      "Feedforward dimension: 128\n",
+      "Hidden units: 128\n",
       "Layers: 2\n",
-      "Attention heads: 2\n",
-      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 45,311\n",
+      "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([-35.4042, -37.3997, -38.7031, -39.0357, -51.5738], device='cuda:0')\n"
+      "tensor([-34.2615, -41.1441, -29.4518, -43.6911, -49.2374], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project\\nof removerate a pos',\n",
-       " 'The Project coning the or thotk.',\n",
-       " 'he Project Guagre al ady would Q',\n",
-       " 'e Project Gurse me precculy be t',\n",
-       " ' Project Gut sijelence iticaugti']"
+       "['\\ufeffThe Project Gutenberg all-hances, whight',\n",
+       " 'The Project GutenbergLobjertgatens.\\n\\n    ',\n",
+       " 'he Project Gutenberg 19L.\\n\\n\\nBlack would o',\n",
+       " 'e Project Gutenberg Esmpult ic for with a',\n",
+       " ' Project Gutenberg EBUsicl. after Yokk, B']"
       ]
      },
      "execution_count": 10,
@@ -350,10 +341,10 @@
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.TransformerEncoder(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_lstm.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.sample(encoded[:5, :12])\n",
+    "indexes, log_probabilities = net.sample(encoded[:5])\n",
     "\n",
     "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
@@ -368,57 +359,54 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive Transformer Encoder\n",
+      "Model: Autoregressive LSTM\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Max sequence length: 32\n",
       "Embedding dimension: 32\n",
-      "Feedforward dimension: 128\n",
+      "Hidden units: 128\n",
       "Layers: 2\n",
-      "Attention heads: 2\n",
-      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 45,311\n",
+      "Trainable parameters: 230,335\n",
       "\n",
-      "tensor([[-12.3343, -14.5509, -15.1686, -15.4284, -15.7189],\n",
-      "        [-14.2857, -14.3190, -14.7305, -15.1044, -15.2126],\n",
-      "        [-14.9410, -15.0016, -16.4287, -16.5968, -16.8477],\n",
-      "        [-15.1379, -15.1908, -15.6329, -16.5546, -16.5848],\n",
-      "        [-12.7563, -15.0439, -15.6290, -15.8614, -16.1553]], device='cuda:0')\n",
-      "[['\\ufeffThe Project of the King.\\n\\n     ',\n",
-      "  \"\\ufeffThe Project of the King's of th\",\n",
-      "  \"\\ufeffThe Project of the King's the p\",\n",
-      "  \"\\ufeffThe Project of the King's the K\",\n",
-      "  \"\\ufeffThe Project of the King's the t\"],\n",
-      " ['The Project of the the pawn the ',\n",
-      "  \"The Project of the King's of the\",\n",
-      "  \"The Project of the King's the mo\",\n",
-      "  \"The Project of the King's the pa\",\n",
-      "  \"The Project of the King's the pr\"],\n",
-      " [\"he Project Gut of the the King's\",\n",
-      "  'he Project Gut the the pawn the ',\n",
-      "  'he Project Gut of the the King t',\n",
-      "  'he Project Gut of the the Queen ',\n",
-      "  \"he Project Gut of the the Queen'\"],\n",
-      " ['e Project Gut the pawn the pawn ',\n",
-      "  'e Project Gut the pawn the King ',\n",
-      "  \"e Project Gut the pawn the King'\",\n",
-      "  'e Project Gut of the pawn the pa',\n",
-      "  'e Project Gut the pawn the pawns'],\n",
-      " [' Project Gut of the King.\\n\\n     ',\n",
-      "  \" Project Gut of the King's of th\",\n",
-      "  \" Project Gut of the King's the p\",\n",
-      "  \" Project Gut of the King's the K\",\n",
-      "  \" Project Gut of the King's the Q\"]]\n"
+      "tensor([[ -6.1016,  -7.0423,  -8.4072,  -8.4236,  -9.2888],\n",
+      "        [ -5.9182,  -6.8601,  -8.2863,  -8.4591,  -9.1900],\n",
+      "        [ -7.7467,  -9.8321, -10.8760, -11.0262, -11.1016],\n",
+      "        [ -7.3991,  -8.5551,  -9.3477, -10.0063, -10.4871],\n",
+      "        [-14.4735, -14.6115, -14.7318, -14.9337, -14.9415]], device='cuda:0')\n",
+      "[['\\ufeffThe Project Gutenberg\\n\\n        ---------',\n",
+      "  '\\ufeffThe Project Gutenberg\\n\\n         --------',\n",
+      "  '\\ufeffThe Project Gutenberg\\n\\n                 ',\n",
+      "  '\\ufeffThe Project Gutenberg\\n\\n               Di',\n",
+      "  '\\ufeffThe Project Gutenberg\\n\\n                D'],\n",
+      " ['The Project Gutenberg\\n\\n        ----------',\n",
+      "  'The Project Gutenberg\\n\\n         ---------',\n",
+      "  'The Project Gutenberg\\n\\n               Dia',\n",
+      "  'The Project Gutenberg\\n\\n                  ',\n",
+      "  'The Project Gutenberg\\n\\n                Di'],\n",
+      " ['he Project Gutenberg 2. .................',\n",
+      "  'he Project Gutenberg 2. ................ ',\n",
+      "  'he Project Gutenberg 2. ............... K',\n",
+      "  'he Project Gutenberg 2. ...............  ',\n",
+      "  'he Project Gutenberg 2. ..............   '],\n",
+      " ['e Project Gutenberg End-game.\\n\\n          ',\n",
+      "  'e Project Gutenberg End-games.\\n\\n         ',\n",
+      "  'e Project Gutenberg End-game.\\n\\n         1',\n",
+      "  'e Project Gutenberg End-game.\\n\\n         2',\n",
+      "  'e Project Gutenberg End-game.\\n\\n        --'],\n",
+      " [' Project Gutenberg EBlack cannot play the',\n",
+      "  ' Project Gutenberg EBlack cannot play P-K',\n",
+      "  ' Project Gutenberg EBlack cannot play P-Q',\n",
+      "  ' Project Gutenberg EBlack cannot be playi',\n",
+      "  ' Project Gutenberg EBlack cannot move in ']]\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.TransformerEncoder(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_lstm.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.beam_search(encoded[:5, :12])\n",
+    "indexes, log_probabilities = net.beam_search(encoded[:5])\n",
     "\n",
     "print(log_probabilities)\n",
     "pprint([net.tensor2text(t) for t in indexes])"
@@ -430,13 +418,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive LSTM\n",
+      "Tokens in the in vocabulary: 95\n",
+      "Tokens in the out vocabulary: 95\n",
+      "Embedding dimension: 32\n",
+      "Hidden units: 128\n",
+      "Layers: 2\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 230,335\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project of the King.\\n\\n     ',\n",
-       " 'The Project of the the pawn the ',\n",
-       " \"he Project Gut of the the King's\",\n",
-       " 'e Project Gut the pawn the pawn ',\n",
-       " ' Project Gut of the King.\\n\\n     ']"
+       "['\\ufeffThe Project Gutenberg\\n\\n        ---------',\n",
+       " 'The Project Gutenberg\\n\\n        ----------',\n",
+       " 'he Project Gutenberg 2. .................',\n",
+       " 'e Project Gutenberg End-game.\\n\\n          ',\n",
+       " ' Project Gutenberg EBlack cannot play the']"
       ]
      },
      "execution_count": 12,
@@ -445,17 +448,14 @@
     }
    ],
    "source": [
-    "idx, log_probabilities = net.predict(encoded[:5, :12])\n",
+    "importlib.reload(autoregressive)    \n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_lstm.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
+    "net.to(device)\n",
+    "idx, log_probabilities = net.predict(encoded[:5])\n",
     "\n",
     "net.tensor2text(idx)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
