--- a/examples/character_level_language_modelling/autoregressive_TransformerEncoder.ipynb
+++ b/examples/character_level_language_modelling/autoregressive_TransformerEncoder.ipynb
@@ -178,19 +178,19 @@
      "output_type": "stream",
      "text": [
       "556949\n",
-      "556928\n",
-      "['\\ufeffThe Project Gutenber', 'The Project Gutenberg', 'he Project Gutenberg ', 'e Project Gutenberg E', ' Project Gutenberg EB']\n"
+      "556916\n",
+      "['\\ufeffThe Project Gutenberg EBook of C', 'The Project Gutenberg EBook of Ch', 'he Project Gutenberg EBook of Che', 'e Project Gutenberg EBook of Ches', ' Project Gutenberg EBook of Chess']\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bc67b80a0cd74dcc8684991a5b7b5771",
+       "model_id": "4cc306ad20e1403f92a5eefdf1d7c601",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=556928.0), HTML(value='')))"
+       "HBox(children=(HTML(value=''), FloatProgress(value=0.0, max=556916.0), HTML(value='')))"
       ]
      },
      "metadata": {},
@@ -201,12 +201,12 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "torch.Size([556928, 21])\n"
+      "torch.Size([556916, 33])\n"
      ]
     }
    ],
    "source": [
-    "length = 21\n",
+    "length = 33\n",
     "lines = []\n",
     "for i in range(len(text))[:-length]:\n",
     "    lines.append(text[i:length + i])\n",
@@ -221,39 +221,42 @@
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive LSTM\n",
+      "Model: Autoregressive Transformer Encoder\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Hidden units: 64\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 59,159\n",
+      "Trainable parameters: 164,255\n",
       "\n",
-      "Epoch | Train                 | Development           | Training time\n",
-      "      | Loss     | Error Rate | Loss     | Error Rate |\n",
-      "---------------------------------------------------------------------\n",
-      "    1 |   2.4601 |     59.684 |   3.3709 |     78.035 |         36.92\n",
-      "    2 |   1.7527 |     46.546 |   3.1164 |     73.575 |         73.44\n",
-      "    3 |   1.5131 |     41.576 |   2.9371 |     72.200 |        109.67\n",
-      "    4 |   1.3859 |     38.736 |   2.8369 |     70.275 |        146.38\n",
-      "    5 |   1.3098 |     36.965 |   2.7619 |     67.345 |        183.49\n"
+      "Epoch | Train                 | Training time\n",
+      "      | Loss     | Error Rate |\n",
+      "---------------------------------------------\n",
+      "    1 |   1.7151 |     45.805 |         92.48\n",
+      "    2 |   1.2631 |     36.594 |        186.35\n",
+      "    3 |   1.1553 |     33.917 |        281.52\n",
+      "    4 |   1.0972 |     32.520 |        382.42\n",
+      "    5 |   1.0593 |     31.620 |        476.62\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.LSTM(char2i, i2char)\n",
+    "net = autoregressive.TransformerEncoder(char2i, i2char)\n",
     "net.to(device)\n",
-    "# using a subsample as \"dev\" set\n",
-    "performance = net.fit(encoded, encoded[:1000], save_path = \"checkpoints/autoregressive_lstm.pt\")"
+    "performance = net.fit(encoded, save_path = \"checkpoints/autoregressive_transformer.pt\")\n",
+    "net.save_architecture(\"architectures/autoregressive_transformer.architecture\")"
    ]
   },
   {
@@ -265,26 +268,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive LSTM\n",
+      "Model: Autoregressive Transformer Encoder\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Hidden units: 64\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 59,159\n",
+      "Trainable parameters: 164,255\n",
       "\n",
-      "tensor([-19.5982, -18.1931, -16.9650, -19.1240, -19.1656], device='cuda:0')\n"
+      "tensor([ -9.2367,  -9.2016,  -8.1720,  -8.9351, -10.3069], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gutenberg the pawn at the pa',\n",
-       " 'The Project Gutenberg the pawn at the paw',\n",
-       " 'he Project Gutenberg the pawn at the pawn',\n",
-       " 'e Project Gutenberg Eom the pawn at the p',\n",
-       " ' Project Gutenberg EB           Kt-Kt3\\n  ']"
+       "['\\ufeffThe Project Gutenberg-tm the pa',\n",
+       " 'The Project Gutenberg-tm the paw',\n",
+       " 'he Project Gutenberg-tm the pawn',\n",
+       " \"e Project Gutenberg-tm the King'\",\n",
+       " ' Project Gutenberg-tm the pawn a']"
       ]
      },
      "execution_count": 9,
@@ -294,10 +300,10 @@
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.LSTM(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.greedy_search(encoded[:5])\n",
+    "indexes, log_probabilities = net.greedy_search(encoded[:5, :12])\n",
     "\n",
     "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
@@ -312,26 +318,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive LSTM\n",
+      "Model: Autoregressive Transformer Encoder\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Hidden units: 64\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 59,159\n",
+      "Trainable parameters: 164,255\n",
       "\n",
-      "tensor([-36.9407, -31.6861, -37.3709, -28.8181, -34.5342], device='cuda:0')\n"
+      "tensor([-28.9927, -30.3730, -26.7802, -23.4505, -12.8352], device='cuda:0')\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "['\\ufeffThe Project Gutenbernevile fing, and mov',\n",
-       " 'The Project Gutenbergs there\\nevent-game o',\n",
-       " 'he Project Gutenberg weorr to whes\\n\\n     ',\n",
-       " 'e Project Gutenberg Eefenced with other m',\n",
-       " ' Project Gutenberg EBare collition, oved ']"
+       "['\\ufeffThe Project Gutenbefforam,\\nand ',\n",
+       " 'The Project procese, folllows to',\n",
+       " 'he Project Game For B6ch, which\\n',\n",
+       " 'e Project Gutenbernal for 12. ..',\n",
+       " ' Project Gutenberg-tm the suppor']"
       ]
      },
      "execution_count": 10,
@@ -341,10 +350,10 @@
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.LSTM(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.sample(encoded[:5])\n",
+    "indexes, log_probabilities = net.sample(encoded[:5, :12])\n",
     "\n",
     "print(log_probabilities)\n",
     "net.tensor2text(indexes)"
@@ -359,54 +368,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model: Autoregressive LSTM\n",
+      "Model: Autoregressive Transformer Encoder\n",
       "Tokens in the in vocabulary: 95\n",
       "Tokens in the out vocabulary: 95\n",
-      "Embedding dimension: 8\n",
-      "Hidden units: 64\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
       "Layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
       "Dropout: 0.0\n",
-      "Trainable parameters: 59,159\n",
+      "Trainable parameters: 164,255\n",
       "\n",
-      "tensor([[-16.8889, -17.8440, -17.8571, -18.0461, -18.2158],\n",
-      "        [ -6.7699,  -8.4641, -10.2892, -10.7763, -10.7949],\n",
-      "        [-15.4294, -15.6800, -15.9391, -16.1423, -16.2700],\n",
-      "        [-16.0051, -16.0439, -16.2139, -16.4134, -16.5486],\n",
-      "        [ -5.3734,  -6.8448,  -7.3414, -11.5521, -12.0292]], device='cuda:0')\n",
-      "[['\\ufeffThe Project Gutenberation the pawns the ',\n",
-      "  \"\\ufeffThe Project Gutenberations the King's of\",\n",
-      "  \"\\ufeffThe Project Gutenberations the King's th\",\n",
-      "  \"\\ufeffThe Project Gutenberations the King's an\",\n",
-      "  \"\\ufeffThe Project Gutenberations the King's to\"],\n",
-      " ['The Project Gutenberg.\\n\\n        ---------',\n",
-      "  'The Project Gutenberg.\\n\\n                 ',\n",
-      "  'The Project Gutenberg.\\n\\n          2. Kt-K',\n",
-      "  'The Project Gutenberg.\\n\\n          2. Kt-Q',\n",
-      "  'The Project Gutenberg.\\n\\n          2. Kt-B'],\n",
-      " ['he Project Gutenberg the pawn of the pawn',\n",
-      "  \"he Project Gutenberg the King's of the pa\",\n",
-      "  \"he Project Gutenberg the King's and the p\",\n",
-      "  \"he Project Gutenberg the King's of the Ki\",\n",
-      "  \"he Project Gutenberg the King's and the K\"],\n",
-      " [\"e Project Gutenberg Eove of the King's of\",\n",
-      "  \"e Project Gutenberg Eove of the King's th\",\n",
-      "  \"e Project Gutenberg Eove of the King's an\",\n",
-      "  \"e Project Gutenberg Eove of the King's to\",\n",
-      "  'e Project Gutenberg Eove of the pawn of t'],\n",
-      " [' Project Gutenberg EB\\n        -----------',\n",
-      "  ' Project Gutenberg EB\\n         ----------',\n",
-      "  ' Project Gutenberg EB\\n       ------------',\n",
-      "  ' Project Gutenberg EB\\n        ----------\\n',\n",
-      "  ' Project Gutenberg EB\\n                   ']]\n"
+      "tensor([[ -7.9266,  -8.1982,  -9.0614,  -9.2367,  -9.2722],\n",
+      "        [ -7.8441,  -8.8582,  -9.2016,  -9.3110,  -9.6437],\n",
+      "        [ -8.0777,  -9.2724,  -9.3451,  -9.4304,  -9.4867],\n",
+      "        [ -8.2489,  -8.2498,  -9.3699,  -9.5252, -10.1802],\n",
+      "        [ -9.1748,  -9.6040, -10.0753, -10.5528, -10.6235]], device='cuda:0')\n",
+      "[['\\ufeffThe Project Gutenberg-tm of the',\n",
+      "  '\\ufeffThe Project Gutenberg-tm 2. ...',\n",
+      "  '\\ufeffThe Project Gutenberg-tm 2. P-K',\n",
+      "  '\\ufeffThe Project Gutenberg-tm the pa',\n",
+      "  '\\ufeffThe Project Gutenberg-tm 2. P-Q'],\n",
+      " ['The Project Gutenberg-tm of the ',\n",
+      "  'The Project Gutenberg-tm on the ',\n",
+      "  'The Project Gutenberg-tm the paw',\n",
+      "  'The Project Gutenberg-tm the Kin',\n",
+      "  'The Project Gutenberg-tm with th'],\n",
+      " ['he Project Gutenberg-tm 2. ...  ',\n",
+      "  'he Project Gutenberg-tm 2. P-Q4 ',\n",
+      "  'he Project Gutenberg-tm 2. P-QB4',\n",
+      "  'he Project Gutenberg-tm 2. .... ',\n",
+      "  'he Project Gutenberg-tm on the p'],\n",
+      " ['e Project Gutenberg-tm with the ',\n",
+      "  'e Project Gutenberg-tm therefore',\n",
+      "  'e Project Gutenberg-tm on the pa',\n",
+      "  'e Project Gutenberg-tm of the pa',\n",
+      "  'e Project Gutenberg-tm on the Ki'],\n",
+      " [' Project Gutenberg-tm 2. ...    ',\n",
+      "  ' Project Gutenberg-tm 2. ... Kt-',\n",
+      "  ' Project Gutenberg-tm 2. Kt-B3  ',\n",
+      "  ' Project Gutenberg-tm 2. .. P-Kt',\n",
+      "  ' Project Gutenberg-tm 2. ... Ktx']]\n"
      ]
     }
    ],
    "source": [
     "importlib.reload(autoregressive)    \n",
-    "net = autoregressive.LSTM(char2i, i2char)\n",
-    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_lstm.pt\"))\n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
     "net.to(device)\n",
-    "indexes, log_probabilities = net.beam_search(encoded[:5])\n",
+    "indexes, log_probabilities = net.beam_search(encoded[:5, :12])\n",
     "\n",
     "print(log_probabilities)\n",
     "pprint([net.tensor2text(t) for t in indexes])"
@@ -418,13 +430,31 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: Autoregressive Transformer Encoder\n",
+      "Tokens in the in vocabulary: 95\n",
+      "Tokens in the out vocabulary: 95\n",
+      "Max sequence length: 32\n",
+      "Embedding dimension: 64\n",
+      "Feedforward dimension: 256\n",
+      "Layers: 2\n",
+      "Attention heads: 2\n",
+      "Activation: relu\n",
+      "Dropout: 0.0\n",
+      "Trainable parameters: 164,255\n",
+      "\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "[\"\\ufeffThe Project Gutenberations the King's of \",\n",
-       " 'The Project Gutenberg.\\n\\n        ----------',\n",
-       " 'he Project Gutenberg the pawn of the pawn ',\n",
-       " \"e Project Gutenberg Eove of the King's of \",\n",
-       " ' Project Gutenberg EB\\n        ------------']"
+       "['\\ufeffThe Project Gutenberg-tm of the',\n",
+       " 'The Project Gutenberg-tm of the ',\n",
+       " 'he Project Gutenberg-tm 2. ...  ',\n",
+       " 'e Project Gutenberg-tm with the ',\n",
+       " ' Project Gutenberg-tm 2. ...    ']"
       ]
      },
      "execution_count": 12,
@@ -433,7 +463,12 @@
     }
    ],
    "source": [
-    "idx, log_probabilities = net.predict(encoded[:5])\n",
+    "importlib.reload(autoregressive)    \n",
+    "net = autoregressive.load_architecture(\"architectures/autoregressive_transformer.architecture\")\n",
+    "net.load_state_dict(torch.load(\"checkpoints/autoregressive_transformer.pt\"))\n",
+    "net.to(device)\n",
+    "\n",
+    "idx, log_probabilities = net.predict(encoded[:5, :12])\n",
     "\n",
     "net.tensor2text(idx)"
    ]
